[package]
name = "pkcs1"
version = "0.8.0-pre"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #1:
RSA Cryptography Specifications Version 2.2 (RFC 8017)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/pkcs1"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "pem", "pkcs", "rsa"]
readme = "README.md"
edition = "2021"
rust-version = "1.71"

[dependencies]
der = { version = "=0.8.0-pre.0", features = ["oid"] }
spki = { version = "=0.8.0-pre.0" }

# optional dependencies
pkcs8 = { version = "=0.11.0-pre", optional = true, default-features = false }

[dev-dependencies]
const-oid = { version = "=0.10.0-pre.2", features = ["db"] }
hex-literal = "0.4"
tempfile = "3"

[features]
zeroize = ["der/zeroize"]
alloc = ["der/alloc", "zeroize", "pkcs8?/alloc"]
pem = ["alloc", "der/pem", "pkcs8?/pem"]
std = ["der/std", "alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
