[package]
name = "pkcs10"
version = "0.0.0"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #10:
Certification Request Syntax Specification (RFC 5208).
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/pkcs10"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "pkcs", "certification", "request", "csr", "certificate"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dev-dependencies]
x509 = { version = "0.0.1", path = "../x509" }
hex-literal = "0.3"

[dependencies]
der = { version = "0.6.0-pre.1", features = ["oid", "derive", "alloc"], path = "../der" }
spki = { version = "0.6.0-pre", path = "../spki" }
x501 = { version = "0.0.0", path = "../x501" }

[features]
pem = ["der/pem", "spki/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
