[package]
name = "pkcs12"
version = "0.2.0-pre.0"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #12:
Personal Information Exchange Syntax v1.1 (RFC7292)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/pkcs12"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "pkcs", "private"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
der = { version = "0.8", features = ["alloc", "derive", "oid"], default-features = false }
spki = { version = "0.8", default-features = false }
x509-cert = { version = "0.3.0-rc.4", default-features = false }
const-oid = { version = "0.10", features = ["db"], default-features = false }
cms = { version = "=0.3.0-pre.2", default-features = false }

# optional dependencies
digest = { version = "0.11", features = ["alloc"], optional = true }
zeroize = { version = "1.8.1", optional = true, default-features = false }
sha1 = { version = "0.11.0", optional = true }
cbc = { version = "0.2.0-rc.4", features = ["block-padding"], optional = true }
rc2 = { version = "0.9.0", optional = true }

[dev-dependencies]
hex-literal = "1"
pkcs8 = { version = "0.11.0-rc.10", features = ["alloc", "pkcs5"] }
pkcs5 = { version = "0.8.0-rc.13", features = ["pbes2", "3des"] }
cipher = "0.5"
sha1 = "0.11.0"
sha2 = "0.11"
whirlpool = "0.11"
rc2 = "0.9.0"

[features]
default = ["pem"]
kdf = ["dep:digest", "zeroize/alloc"]
# Named "encryption" to match the convention used by pkcs8 in this monorepo,
# which uses a single "encryption" feature for both encrypt and decrypt paths.
encryption = ["kdf", "dep:sha1", "dep:cbc", "dep:rc2"]
pem = ["der/pem", "x509-cert/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
