[package]
name = "pkcs12"
version = "0.2.0-pre.0"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #12:
Personal Information Exchange Syntax v1.1 (RFC7292)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/pkcs12"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "pkcs", "private"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
der = { version = "0.8", features = ["alloc", "derive", "oid"], default-features = false }
spki = { version = "0.8", default-features = false }
x509-cert = { version = "0.3.0-rc.4", default-features = false }
const-oid = { version = "0.10", features = ["db"], default-features = false }
cms = { version = "=0.3.0-pre.2", default-features = false }

# optional dependencies
# "zeroize" feature enables zeroing of the digest's internal block buffer, which
# holds input fragments of the id||salt||password data between Update calls.
digest = { version = "0.11", features = ["alloc", "zeroize"], optional = true }
# digest/zeroize does not propagate hybrid-array/zeroize, so Array<u8, OutputSize>: Zeroize
# is not satisfied without this direct dep.  If digest ever adds hybrid-array/zeroize to
# its own zeroize feature, this dep can be removed.
hybrid-array = { version = "0.4", features = ["zeroize"], optional = true }
zeroize = { version = "1.8.1", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
pkcs8 = { version = "0.11.0-rc.10", features = ["pkcs5"] }
pkcs5 = { version = "0.8.0-rc.13", features = ["pbes2", "3des"] }
sha2 = "0.11"
whirlpool = "0.11"

[features]
default = ["pem"]
kdf = ["dep:digest", "dep:hybrid-array", "zeroize/alloc"]
pem = ["der/pem", "x509-cert/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
