[package]
name = "pkcs12"
version = "0.2.0-pre.0"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #12:
Personal Information Exchange Syntax v1.1 (RFC7292)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/pkcs12"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "pkcs", "private"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
der = { version = "0.8", features = ["alloc", "derive", "oid"], default-features = false }
spki = { version = "0.8", default-features = false }
x509-cert = { version = "0.3.0-rc.4", default-features = false }
const-oid = { version = "0.10", features = ["db"], default-features = false }
cms = { version = "=0.3.0-pre.2", default-features = false }

# optional dependencies (kdf)
digest = { version = "0.11", features = ["alloc"], optional = true }
zeroize = { version = "1.8.1", optional = true, default-features = false }

# optional dependencies (builder)
pkcs5 = { version = "0.8.0-rc.13", optional = true }
pkcs8 = { version = "0.11.0-rc.11", features = ["encryption"], optional = true }
crypto-common = { version = "0.2.0", optional = true }
hmac = { version = "0.13.0-rc.5", optional = true }
sha2 = { version = "0.11.0-rc.5", optional = true }
log = { version = "0.4.29", optional = true }
rand = { version = "0.10.0", optional = true }
rand_core = { version = "0.10.0", optional = true }
subtle = { version = "2.6.1", optional = true }

# optional dependencies (legacy)
sha1 = { version = "0.11.0", optional = true }
cbc = { version = "0.2.0", optional = true }
des = { version = "0.9.0", optional = true }
rc2 = { version = "0.9.0", optional = true }

[dev-dependencies]
hex-literal = "1"
pkcs8 = { version = "0.11.0-rc.11", features = ["pkcs5"] }
pkcs5 = { version = "0.8.0-rc.13", features = ["pbes2", "3des"] }
sha2 = "0.11"
whirlpool = "0.11"
openssl = { version = "0.10.75", features = ["vendored"] }
subtle-encoding = "0.5.1"
tempfile = "3.26.0"

[features]
default = ["pem"]
kdf = ["dep:digest", "zeroize/alloc"]
pem = ["der/pem", "x509-cert/pem"]
builder = [
    "kdf",
    "dep:pkcs5",
    "dep:pkcs8",
    "dep:crypto-common",
    "dep:hmac",
    "dep:sha2",
    "dep:log",
    "dep:rand",
    "dep:rand_core",
    "dep:subtle",
    "zeroize/alloc",
    "cms/builder",
]
legacy = [
    "builder",
    "dep:sha1",
    "dep:des",
    "dep:rc2",
    "dep:cbc",
    "pkcs5/sha1-insecure",
    "pkcs5/3des",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
