[package]
name = "pkcs5"
version = "0.5.0-pre" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #5:
Password-Based Cryptography Specification Version 2.1 (RFC 8018)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/pkcs5"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "key", "pkcs", "password"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

[dependencies]
der = { version = "=0.6.0-pre.1", features = ["oid"], path = "../der" }
spki = { version = "=0.6.0-pre.0", path = "../spki" }

# optional dependencies
aes = { version = "0.7", optional = true }
block-modes = { version = "0.9", optional = true, default-features = false }
hmac = { version = "0.12", optional = true, default-features = false }
pbkdf2 = { version = "0.10", optional = true, default-features = false }
scrypt = { version = "0.8", optional = true, default-features = false }
sha-1 = { version = "0.10", optional = true, default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
des = { version = "0.7", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"

[features]
alloc = []
3des = ["pbes2", "des"]
des-insecure = ["pbes2", "des"]
pbes2 = ["aes", "block-modes", "hmac", "pbkdf2", "scrypt", "sha2"]
sha1 = ["pbes2", "sha-1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
