[package]
name = "pkcs7"
version = "0.4.0-pre" # Also update html_root_url in lib.rs when bumping this
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #7:
PKCS #7: Cryptographic Message Syntax Version 1.5 (RFC 5652)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/pkcs7"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "pkcs"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

[dependencies]
der = { version = "=0.6.0-pre.0", features = ["oid"], path = "../der" }
spki = { version = "=0.6.0-pre", path = "../spki" }

[dev-dependencies]
hex-literal = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
