[package]
name = "pkcs7"
version = "0.4.0"
description = """
Pure Rust implementation of Public-Key Cryptography Standards (PKCS) #7:
PKCS #7: Cryptographic Message Syntax Version 1.5 (RFC 5652)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/pkcs7"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "pkcs"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
const-oid = { version = "0.9", features = ["db"] }
der = { version = "0.7", features = ["oid", "std"] } # TODO NM "std" for builder only
spki = { version = "0.7" }
x509-cert = { version = "0.2", default-features = false }

# optional dependencies
sha1 = { version = "0.10"}
sha2 = { version = "0.10"}
sha3 = { version = "0.10"}
signature = { version = "2.1.0", features = ["digest", "alloc"]}

[dev-dependencies]
der = { version = "0.7", features = ["oid", "pem"] }
rsa = { version = "0.9.1", features = ["sha2"] }
ecdsa = { version = "0.16.4", features = ["digest", "pem"] }
p256 = "0.13.0"
hex-literal = "0.4"
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }

# TODO NM [features]
# TODO NM builder = ["sha1", "sha2", "sha3", "signature"]
# TODO NM signature = ["digest", "alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
