[package]
name = "sec1"
version = "0.8.0-rc.13"
description = """
Pure Rust implementation of SEC1: Elliptic Curve Cryptography encoding formats
including ASN.1 DER-serialized private keys as well as the
Elliptic-Curve-Point-to-Octet-String encoding
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/sec1"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "elliptic-curve", "secg"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
base16ct = { version = "1", optional = true, default-features = false }
ctutils = { version = "0.4", optional = true }
der = { version = "0.8", optional = true, features = ["oid"] }
hybrid-array = { version = "0.4.6", optional = true, default-features = false }
serdect = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }
subtle = { version = "2", optional = true, default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
tempfile = "3"

[features]
default = ["der", "point"]
alloc = ["der?/alloc", "zeroize?/alloc"]
std = ["alloc", "der?/std"]

der = ["dep:der", "zeroize"]
pem = ["alloc", "der/pem"]
point = ["dep:base16ct", "dep:hybrid-array"]
serde = ["dep:serdect"]
zeroize = ["dep:zeroize", "der?/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
