[package]
name = "serdect"
description = """
Constant-time serde serializer/deserializer helpers for data that potentially
contains secrets (e.g. cryptographic keys)
"""
version = "0.4.2"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/serdect"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "encoding", "no-std", "parsing"]
keywords = ["crypto", "constant-time", "serde"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
base16ct = { version = "1", default-features = false }
serde = { version = "1.0.184", default-features = false }

# optional features
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
ciborium = "0.2"
hex-literal = "1"
postcard = { version = "1", features = ["use-std"] }
proptest = "1"
rmp-serde = "1"
serde = { version = "1.0.184", default-features = false, features = ["derive"] }
serde_json = "1"
serde-json-core = { version = "0.6", default-features = false, features = ["std"] }
toml = "0.9"

[features]
default = ["alloc"]
alloc = ["base16ct/alloc", "serde/alloc"]
derive = ["serde/derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = []
