[package]
name = "spki"
version = "0.8.0-rc.4"
description = """
X.509 Subject Public Key Info (RFC5280) describing public keys as well as their
associated AlgorithmIdentifiers (i.e. OIDs)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/formats/tree/master/spki"
repository = "https://github.com/RustCrypto/formats"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "x509"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
der = { version = "0.8", features = ["oid"] }

# Optional dependencies
arbitrary = { version = "1.4", features = ["derive"], optional = true }
base64ct = { version = "1", optional = true, default-features = false }
digest = { version = "0.11.0-rc.5", optional = true, default-features = false }
sha2 = { version = "0.11.0-rc.2", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
tempfile = "3"

[features]
alloc = ["base64ct?/alloc", "der/alloc"]
std = ["der/std", "alloc"]

arbitrary = ["std", "dep:arbitrary", "der/arbitrary"]
base64 = ["dep:base64ct"]
fingerprint = ["digest", "sha2"]
pem = ["alloc", "der/pem"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
