[package]
name = "ssh-key"
version = "0.4.0-pre"
description = """
Pure Rust implementation of SSH key file format decoders/encoders as described
in RFC4253 and RFC4716 as well as the OpenSSH key formats and `authorized_keys`.
Supports "heapless" `no_std` embedded targets with an optional `alloc` feature.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/ssh-key"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "openssh", "ssh"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

[dependencies]
base64ct = { version = "1.4", path = "../base64ct" }
pem-rfc7468 = { version = "0.4", path = "../pem-rfc7468" }
zeroize = { version = "1", default-features = false }

# optional dependencies
aes = { version = "0.8", optional = true, default-features = false }
ctr = { version = "0.9", optional = true, default-features = false }
bcrypt-pbkdf = { version = "0.9", optional = true, default-features = false }
sec1 = { version = "=0.3.0-pre.1", optional = true, default-features = false, features = ["point"], path = "../sec1" }
sha2 = { version = "0.10", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"
tempfile = "3"

[features]
default = ["ecdsa", "fingerprint", "std"]
alloc = ["zeroize/alloc"]
ecdsa = ["sec1"]
encryption = ["aes", "alloc", "bcrypt-pbkdf", "ctr"]
fingerprint = ["sha2"]
std = ["alloc", "base64ct/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
