[package]
name = "ssh-key"
version = "0.4.0-pre"
description = """
Pure Rust implementation of SSH key file format decoders/encoders as described
in RFC4251 and RFC4253 as well as the OpenSSH key formats and `authorized_keys`.
Supports "heapless" `no_std` embedded targets with an optional `alloc` feature.
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/ssh-key"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["crypto", "key", "openssh", "ssh"]
readme = "README.md"
edition = "2021"
rust-version = "1.57"

[dependencies]
base64ct = { version = "1.4", path = "../base64ct" }
pem-rfc7468 = { version = "0.5", path = "../pem-rfc7468" }
zeroize = { version = "1", default-features = false }

# optional dependencies
aes = { version = "0.8", optional = true, default-features = false }
ctr = { version = "0.9", optional = true, default-features = false }
bcrypt-pbkdf = { version = "0.9", optional = true, default-features = false }
ed25519-dalek = { version = "1.0.1", optional = true, default-features = false, features = ["u64_backend"] }
rand_core = { version = "0.6", optional = true, default-features = false }
sec1 = { version = "=0.3.0-pre.1", optional = true, default-features = false, features = ["point"], path = "../sec1" }
sha2 = { version = "0.10", optional = true, default-features = false }
subtle = { version = "2", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "0.3"
tempfile = "3"
zeroize_derive = "1.3" # hack to make minimal-versions lint happy (pulled in by `ed25519-dalek`)

[features]
default = ["ecdsa", "fingerprint", "rand_core", "std"]
alloc = ["zeroize/alloc"]
ecdsa = ["sec1"]
ed25519 = ["ed25519-dalek", "rand_core"]
encryption = ["aes", "alloc", "bcrypt-pbkdf", "ctr", "rand_core"]
fingerprint = ["sha2"]
getrandom = ["rand_core/getrandom"]
std = ["alloc", "base64ct/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
