[package]
name = "tls_codec"
version = "0.2.0-pre"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/tls_codec/"
description = "A pure Rust implementation of the TLS (de)serialization"
readme = "README.md"
repository = "https://github.com/RustCrypto/formats/tree/master/tls_codec"
edition = "2021"
rust-version = "1.56"

[dependencies]
zeroize = { version = "1", features = ["zeroize_derive"] }

# optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
tls_codec_derive = { version = "=0.2.0-pre", path = "derive", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
derive = [ "tls_codec_derive" ]
serde_serialize = [ "serde" ]

[[bench]]
name = "tls_vec"
harness = false
