[package]
name = "x501"
version = "0.1.0" # Also update html_root_url in lib.rs when bumping this
edition = "2021"
description = "Pure Rust implementation of some of the types defined in X.501"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RustCrypto/formats/tree/master/x509"
categories = ["cryptography", "data-structures", "encoding", "no-std"]
keywords = ["crypto", "X.501"]
readme = "README.md"
rust-version = "1.56"

[dev-dependencies]
hex-literal = "0.3"

[dependencies]
der = { version = "=0.6.0-pre.0", features = ["derive", "alloc", "oid"], path = "../der" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
